[tool.poetry]
name = "cipher_lu_rui"
version = "0.1.1"
description = "Encrypt and decrypt techniques."
authors = ["Rui Lu <rl3191@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
python-semantic-release = "^7.3.0"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
